force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal__c/tc9_bgl__Acc_Payroll_Journal__c.object-meta.xml
<CustomObject>
    <description>The Accounting payroll Journal Object holds data relating to the GL Journal entry</description>
    <label>Accounting Payroll Journal</label>
    <nameField>
        <displayFormat>ACCJNL-{0000000}</displayFormat>
        <label>Payroll Journal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Payroll Journal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>