force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal__c/fields/tc9_bgl__Accounting_System__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Accounting_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting System</label>
    <referenceTo>tc9_bgl__Acc_System_Setup__c</referenceTo>
    <relationshipLabel>Accounting Payroll Journal</relationshipLabel>
    <relationshipName>Accounting_Payroll_Journal</relationshipName>
    <type>Lookup</type>
</CustomField>