force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal__c/fields/tc9_bgl__Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Calendar_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related calendar Period record for Payroll Accrual Journals</description>
    <inlineHelpText>Related calendar Period record for Payroll Accrual Journals</inlineHelpText>
    <label>Calendar Period</label>
    <referenceTo>tc9_pr__Calendar_Period__c</referenceTo>
    <relationshipLabel>Accounting Payroll Journal</relationshipLabel>
    <relationshipName>Accounting_Payroll_Journal</relationshipName>
    <type>Lookup</type>
</CustomField>