force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal__c/fields/tc9_bgl__Integration_Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Integration_Sync_Message__c</fullName>
    <description>This is the sync message retrieved from the external application that this record is being synced to/from.</description>
    <inlineHelpText>This is the sync message retrieved from the external application that this record is being synced to/from.</inlineHelpText>
    <label>Integration Sync Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>