force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal__c/fields/tc9_bgl__Journal_date__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Journal_date__c</fullName>
    <description>Date of the Journal which comes from the Date paid on the associated Payment File or the processing date of any accrual journals</description>
    <inlineHelpText>Date of the Journal which comes from the Date paid on the associated Payment File or the processing date of any accrual journals</inlineHelpText>
    <label>Journal date</label>
    <type>Date</type>
</CustomField>