force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal__c/fields/tc9_bgl__Journal_detailed_description__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Journal_detailed_description__c</fullName>
    <description>Further detailed description of the journal</description>
    <inlineHelpText>Further detailed description of the journal</inlineHelpText>
    <label>Journal Detailed Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>