force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal__c/fields/tc9_bgl__Journal_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Journal_Type__c</fullName>
    <label>Journal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accrued Costs</fullName>
            </value>
            <value>
                <fullName>Accrued Leave</fullName>
            </value>
            <value>
                <fullName>Accrued Revenue</fullName>
            </value>
            <value>
                <fullName>Cost of Payroll</fullName>
            </value>
            <value>
                <fullName>Superannuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>