force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal__c/listViews/tc9_bgl__All.listView-meta.xml
<ListView>
    <fullName>tc9_bgl__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_bgl__Journal_date__c</columns>
    <columns>tc9_bgl__Pay_Batch__c</columns>
    <columns>tc9_bgl__Journal_Type__c</columns>
    <columns>tc9_bgl__Payment_File__c</columns>
    <columns>tc9_bgl__Sent_To_GL_Status__c</columns>
    <columns>tc9_bgl__Date_Sent_To_GL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>